plplot (5.6.1-2) unstable; urgency=low

  * debian/control: Replaced all build-dependencies for java by
    java-gcj-compat-dev, which will be default java environment for
    building packages soon (thanks to Michael Koch <konqueror@gmx.de>
    for the hint)

 -- Rafael Laboissiere <rafael@debian.org>  Mon,  5 Jun 2006 19:07:48 +0200

plplot (5.6.1-1) unstable; urgency=low

  * New upstream release
  * debian/watch: Added file

  [changes for 5.6.0.rc1.5.6.1-2), not officially released]
  * debian/patches/50_check-for-octave2.1.dpatch: Abort the
    toggle_plplot_use script if using Octave other than version 2.1.*
    (closes: #368753)
  * debian/rules: Enable installation of the PDL examples
  * debian/control: Build-depends on pdl

  [changes for 5.6.0.rc1.5.6.1-1), not officially released]
  * New upstream release candidate (5.6.1_RC1). This version contains the
    binding for Fortran 95.
  * debian/rules:
    + Enabled compilation of Fortran 95 binding.  Due to some strange
      libtool problem, "FC=gfortran and F77=gfortran" must be given to
      configure.
    + Run "make check" after "make" in target build-stamp
  * debian/control: Created the new package libplplot-fortran9 containing
    the F77 and F95 bindings.
  * debian/plplot-doc.doc-base: Fixed path for Files and Index.

 -- Rafael Laboissiere <rafael@debian.org>  Wed, 31 May 2006 11:21:05 +0200

plplot (5.6.0-1) unstable; urgency=low

  * New upstream release:
    - New language binding for Java (package libplplot9-java, which was
      already in version 5.5.3-1, uploaded to experimental)
    - New drivers:
      + Gnome Canvas Widget (packages python-plplot-gnome2 and
        python-plplot-gnome2 (which were already in version 5.5.3-1,
        uploaded to experimental)
      + wxWidgets tool kit (package plplot9-driver-wxwidgets)
      + PostScript with Unicode support (package plplot9-driver-psttf)
  * debian/control:
    - Bumped Standards-Version to 3.7.2 (no changes needed)